re PR rtl-optimization/17931 (andl and testb are not combined)

PR rtl-optimization/17931
	* config/i386/i386.c (ix86_rtx_costs): Handle COMPARE with
	ZERO_EXTRACT in it.

From-SVN: r88943